* Familiar :
	- RemoveFromPlayer
* EntityNPC :
	- GetDarkRedChampionRegenTimer
* XMLData :
	- XMLData.GetEntryByOrder: gets entries in the order they appear on the xmls.
* Callbacks :
	- MC_POST_NPC_DARK_RED_CHAMPION_REGEN: Called right after a dark red champion regenerates out of goo form
  - Added MC_PRE/POST_PLAYER_ADD_HEARTS(EntityPlayer Player, int Amount, AddHealthType AddHealthType, bool OptionalArg) that allows changing the added amount of hearts.
/newline/
Modified:
* Entity :
	- GetCollisionCapsule offset vector argument is now optional (Vector.Zero)
* Pickup :
	- Pickup:IsBlind method now checks natural blind effect (also added "CheckForcedBlindOnly" optional argument)
* Changed the destination goal sprites from the daily menu to match the style of the other paper sprites
/newline/
Fixes:
	* Fixed issue that preventing the root attributes on repentogon-supported xmls(achievements,giantbook,backdrops) from working properly
	* Fixed an issue that prevented custom parsed attributes from working on xmls with hugeass comments at the beginning of the file
	* Fixed an issue where the console would behave sporadically when closed with numpad enter
	* Fixed MC_POST_SFX_PLAY not firing properly when there was no PRE added.
	* Fixed Achievement Reversed Hierophant enum naming (deprecated ones left for compatibility)
/newline/
/newline/
v1.0.6b -
Fixes:
* Fixed an issue that caused gamepad to be calling undo mods when going down on the mods menu
* Fixed an issue that made search and undo mods not work if you didnt restart your machine for 24 days (blame microsoft)
/newline/
/newline/
v1.0.6a -
Additions:
* Minimap :
	- GetState
	- GetHoldTime
	- GetItemIconsSprite
	- GetIconsSprite
	- [Get/Set]ShakeDuration
	- [Get/Set]ShakeOffset
/newline/
Fixes:
* Fixed an issue that made it so custom completion marks and achievements are not properly loaded locked or unlocked on a session(big oof, I know).
/newline/
/newline/
v1.0.6 -
Additions:
* Weapon :
	- SetModifiers