@@ -13,6 +13,7 @@ Additions:
 	- XMLData.GetEntryByOrder: gets entries in the order they appear on the xmls.
 * Callbacks :
 	- MC_POST_NPC_DARK_RED_CHAMPION_REGEN: Called right after a dark red champion regenerates out of goo form
+	- MC_POST_ACHIEVEMENT UNLOCK: Called after an achievement is unlocked, has the achievement id as its param
   - Added MC_PRE/POST_PLAYER_ADD_HEARTS(EntityPlayer Player, int Amount, AddHealthType AddHealthType, bool OptionalArg) that allows changing the added amount of hearts.
 /newline/
 Modified:
